<resources>
    <string name="app_name">Chaanpal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about">Acerca de...</string>
    <string name="title_activity_information">Chaanpal</string>
    <string name="ltInformation01">
        "Acerca de Chaanpal."
    </string>
    <string name="ltInformation02">
        "Con Chaanpal puede realizar actividades distintas, una característica principal es saber "
        "que sexo será el bebé. Esto se puede obtener si se ingresa el mes en que la mujer se ha "
        "embarazado o mejor aún, el mes en que quisiera embarazarse. También la edad es muy "
        "indispensable para el cálculo del sexo del bebé, además se debe de indicar si cumple años "
        "o no durante los 9 meses posteriores al mes seleccionado. Los resultados serán efectivos, "
        "solo si los datos de entrada son correctos."
    </string>
    <string name="ltInformation03">
        "La recomendación de un médico con experiencia en el tema del embarazo, fue que desde antes "
        "del embarazo se debe llevar un control médico y que mínimo debe tener 5 consultas durante "
        "el periodo gestacional, es por eso que usted puede obtener información como la "
        "geolocalización de centros de atención, para llevar un control médico a través de la "
        "geolocalización, esta opción está incorporada en las opciones de Chaanpal."
    </string>
    <string name="ltInformation04">
        "También hay información tanto como de riesgos del embarazo como de un embarazo saludable.\n"
        "Esta información se encuentra disponible en las opciones que ofrece Chaanpal.\n\n"
    </string>
    <string name="title_activity_home">Inicio</string>
    <string name="instruction1">¡Bienvenido!</string>
    <string name="instruction2">Ya puede comenzar a utilizar Chaanpal.</string>
    <string name="instruction3">Con Chaanpal, puede lograr saber cuál será el sexo de su bebé, antes o después de su embarazo.</string>
    <string name="descriptionIMG01">Image of presentation</string>
    <string name="instruction4">Sexo del bebe</string>
    <string name="instruction5">Centros de atención</string>
    <string name="instruction6">Riesgos</string>
    <string name="instruction7">Explore más opciones aquí</string>
    <string name="instruction8">Mes de embarazo</string>
    <string name="instruction9">Edad</string>
    <string name="instruction10">Cumple años durante el embarazo?</string>
    <string name="instruction11">Continuar...</string>
    <string name="instruction1101">Regresar</string>
    <string name="instruction12informationadditional">
        "Sabias que el numero 20 es muy importante en el embarazo ya que antes de estas semanas se "
        "considera un embrión, posteriormente es llamado feto. Por otra parte si se presentan "
        "anomalías antes de este tiempo se le nombra “amenaza de aborto”, de lo contrario se "
        "considera parto prematuro."</string>
    <string name="instruction13informationadditional">
        "Sangrado vaginal abundante</string>
    <string name="instruction14informationadditional">
        "Hemorragias periódicas"
    </string>
    <string name="instruction15informationadditional">
        "Infección de vías urinarias"</string>
    <string name="instruction16informationadditional">
        "Tipo de sangre"</string>
    <string name="instruction17informationadditional">
        "Calcular IMC (Índice de Masa Corporal)"</string>
    <string name="instruction18informationadditional">
        "Hinchazón de pies"
    </string>
    <string name="instruction19informationadditional">
        "Zumbido de oídos"
    </string>
    <string name="instruction20informationadditional">
        "Cólicos"</string>
    <string name="instruction21informationadditional">
        "Ardor al orinar"</string>
    <string name="instruction22informationadditional">
        "Ganas de orinar constantemente"</string>
    <string name="instruction26informationadditional">
        "Presione la imagen para ver un dato curioso"</string>
    <string name="instruction27informationadditional">
        "Calcular riesgo del embarazo"</string>
    <string name="instruction28informationadditional">
        "Continuar..."</string>
    <string name="instruction29informationadditional">
        "A continuación, seleccione los síntomas que presente."</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkBoxTrue">Si</string>
    <string name="checkBoxFalse">No</string>
    <string name="instruction13Pregnant">
        "Ponerse en manos de un médico antes del embarazo, para descartar enfermedades previamente o "
        "antes del embarazo, para que el bebé crezca en óptimas condiciones y no se les transmitan "
        "las infecciones al bebé, ni las bacterias, así como su pH se vuelve alcalino y las bacterias "
        "crecen atacando al bebé."
    </string>
    <string name="instruction13Pregnant02">
        "La Norma Oficial Mexicana NOM-007 nos habla de que la mujer debe tener 5 consultas como mínimo "
        "durante el embarazo.\n\nPrimera consulta. A las 5 semanas o cuando se haya enterado que está "
        "embarazada.\nSegunda consulta. A las 12 semanas.\nTercera consulta. A las 28 semanas.\nCuarta "
        "consulta. A las 32 semanas.\nQuinta consulta. A las 39 semanas."
    </string>
    <string name="instruction13Pregnant03">
        "Lo recomendable es que se hagan exámenes de orina para detectar bacterias en la orina y "
        "proteinas.
    </string>
    <string name="instruction13Pregnant04">
        "Alimentación. Deben cuidar la anemia, está permitido subir sólo de 10kg a 12 kg, "
        "si no se cuida la alimentación esto puede provocar anemia en la mujer, disminuye la "
        "concentración de hemoglobina (comúnmente una mujer tiene 14 de hemoglobina), una embarazada "
        "tiene alrededor de 12 lo cual la pone en peligro. Para esto se recomienda fumarato ferroso "
        "y ácido fólico tomado del diario, para prevenir el sufrimiento fetal agudo y las "
        "malformaciones. Si se sube más del peso permitido se produce la preclamsia y diabetes."
    </string>
    <string name="instruction13Pregnant0401">
        "Una de las opciones para saber el sexo de bebé es por medio de un ultrasonido, que tiene "
        "un precio entre los $600 a $1000. Otro sería tomar células del líquido amniótico (cromosomas), "
        "éste método puede poner en riesgo al producto además de ser caro.\n\nSi consulta a un "
        "radiólogo, recordar comentarle revisar partes especificas del bebe. Dos de cada díez bebes "
        "presentan problemas respiratorios antes de nacer.\n\nSe recomienda a las mamás mayor cuidado "
        "en la etapa perinatal, poniéndole atención al género, por la tasa de mortalidad mayor en "
        "varones que en mujeres."
    </string>
    <string name="instruction13Pregnant05">
        "Es más recomendable ir a un centro de atención medica especializado en el embarazo, ya que "
        "en ocasiones tienden a acudir con parteras y éstas no cuentan con el material necesario para "
        "un parto limpio y eficaz.\n\nSe recomienda asistir a un hospital general de gobierno."
    </string>
    <string name="instruction13Pregnant06">
        "La mortalidad en un 80% de los bebes muertos es por atención de parteras.\n\n"
    </string>
    <string name="instruction14">Embarazo saludable</string>
    <string name="instruction15">Usted tendrá un niño</string>
    <string name="instruction16">Usted tendrá una niña</string>
    <string name="instruction17">Importante</string>
    <string name="instruction18">" Al presionar confirmar, usted sabrá el sexo de su bebé."</string>
    <string name="instruction19">"Confirmar"</string>
    <string name="instruction20">"Cancelar"</string>
    <string name="instruction21">"Puede saber que sexo será su bebé en cualquier momento"</string>
    <string name="instruction22">"El riesgo en el embarazo es bajo"</string>
    <string name="instruction23">"El riesgo en el embarazo es medio"</string>
    <string name="instruction24">"Usted ha seleccionado que hay sangrado vaginal abundante y/o "
    "también hemorragias periódicas."</string>
    <string name="instruction2402">"El riesgo de su embarazo es alto, consulte los lugares de atención"</string>
    <string name="instruction25">"Localizar centros de atención"</string>
    <string name="instruction26localizationGeneral">"Teziutlán, Puebla, México"</string>
    <string name="instruction26additionalboy">
        "Usted tendrá un niño."
    </string>
    <string name="instruction26additionalboy2">
        "De acuerdo al género, es más común ciertas enfermedades en el género masculino que en el "
        "femenino, e incluso mortales. Los niños tienen más riesgo de morir y son susceptibles al "
        "momento del parto."
    </string>
    <string name="instruction26additionalboy3">
        "Para reducir la taza de mortalidad, bebe cuidar a su bebé de las siguientes enfermedades."
    </string>
    <string name="instruction26additionalboy4">"°La hipoxia cerebral. El niño nace y no llora, "
        "falta de oxigenación."
    </string>
    <string name="instruction26additionalboy5">"°Síndrome de pulmón húmedo. Es cuando el niño traga "
        "líquido amniótico al momento del parto, termina en neumonía."
    </string>
    <string name="instruction26additionalboy6">
        "°Apnea del recién nacido. Se presenta por la falta de maduración pulmonar, y como "
        "consecuencia provoca meterlo a una incubadora."
    </string>
    <string name="instruction26additionalboy7">
        "°Síndrome de membrana hialina. El niño nace sin un líquido especial. (factor surfactante) "
        "prematuros."
    </string>
    <string name="instruction26additionalboy8">
        "°Estenosis Pilórica. Parte final del estómago son se va el alimento, presenta muchas "
        "complicaciones."
    </string>
    <string name="instruction26additionalboy9">
        "°Atresia de esófago. Se cierra el esófago."
    </string>
    <string name="instruction26additionalboy10">
        "°Ictericia. Tanto fisiológica como por alguna enfermedad patológica. Se ponen"
        "amarillos."
    </string>
    <string name="instruction26additionalboy11">
        "°Acondroplasia. Enanismo."
    </string>
    <string name="instruction26additionalgirl">
        "Usted tendrá una niña."
    </string>
    <string name="instruction26additionalgirl2">
        "De acuerdo al género, es poco frecuente ciertas enfermedades en el género femenino. Las niñas "
        "tienen menor riesgo de morir"
    </string>
    <string name="instruction27Type">
        "Si la madre es del tipo de sangre O- y el padre es A+ marque la opción siguiente:"
        </string>
    <string name="instruction28Type2">
        "Si"
        </string>
    <string name="instruction29">
        "Ingrese los datos que se solicitan"
        </string>
    <string name="instruction30">
        "Ingresar peso (kg)"
        </string>
    <string name="instruction31">
        "Ingresar estatura (m) "
        </string>
    <string name="instruction33">
        "Infecciones de vías urinarias seleccionadas"
        </string>
    <string name="instruction3301">
        "No se ha seleccionado alguna infección en específico"
        </string>
    <string name="instruction34">
        "Sintomas seleccionados"
        </string>
    <string name="instruction35">
        "Dato importante"
        </string>
    <string name="instruction36">
        "IMC"
        </string>
    <string name="instruction40">
        "Aún no se calcula el IMC"
        </string>
    <string name="instruction41">
        "En cuanto al tipo de sangre, todo está correcto"
        </string>
</resources>