<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_chaanpal"
            android:icon="@drawable/ic_chaanpal"
            android:title="@string/instruction4" />
        <item
            android:id="@+id/nav_dialog_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/instruction5" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_warning"
            android:title="@string/instruction6" />
        <item
            android:id="@+id/nav_pregnant"
            android:icon="@drawable/ic_pregnant"
            android:title="@string/instruction14" />
    </group>
</menu>
