<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView5" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/instruction17"
                android:textSize="40sp"
                android:id="@+id/textView5" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/boybaby"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_horizontal"
                android:text="@string/instruction26additionalboy"
                android:id="@+id/textView6"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/instruction26additionalboy2"
                android:gravity="center_horizontal"
                android:id="@+id/textView7"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/instruction26additionalboy3"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/textView8"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction26additionalboy4"
                android:id="@+id/textView9"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction26additionalboy5"
                android:id="@+id/textView10"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction26additionalboy6"
                android:id="@+id/textView11"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction26additionalboy7"
                android:id="@+id/textView12"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction26additionalboy8"
                android:id="@+id/textView13"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction26additionalboy9"
                android:id="@+id/textView14"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction26additionalboy10"
                android:id="@+id/textView15"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction26additionalboy11"
                android:id="@+id/textView16"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <Button
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruction19"
                android:id="@+id/btnconfirmardialog4"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>