<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:background="@drawable/side_nav_bar_warning"
    android:orientation="vertical">


    <CheckBox
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction20informationadditional"
        android:id="@+id/checkBox8"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="left" />
    <CheckBox
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction21informationadditional"
        android:textColor="@color/colorPrimary"
        android:id="@+id/checkBox9"
        android:layout_gravity="left" />
    <CheckBox
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/instruction22informationadditional"
        android:id="@+id/checkBox10"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_gravity="left"/>

    <Button
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction19"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/side_nav_bar_warning"
        android:textColor="@color/colorPrimary"
        android:id="@+id/btnconfirmardialog"
        android:layout_gravity="right" />
</LinearLayout>